2007-12-17  George Liu <george.liu@ricoh-tech.com>

        * Updated 328 Ricoh Family PCL-XL PPD files (Supports -o sides option
	on Mac X; Fixed a bug in UIConstraints that's catured by latest
	cupstestppd.)

2007-12-17  George Liu <george.liu@ricoh-tech.com>

        * Added 7 Postscript and 6 PCL-XL PPD files for 7
	printer entries.

2007-12-02  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Stc670pl.upp.xml: Removed command line prototype, the PPDs
	  for this driver are generated by the "Stc670p.upp" driver entry.
	* driver/Stc670p.upp.xml, driver/Stc760p.upp.xml,
	  driver/Stc760pl.upp.xml: Text corrections.

2007-10-22  George Liu <george.liu@ricoh-tech.com>

        * Added: db/source/PPD/Ricoh/PXL/Ricoh-GX_3050N_PXL.ppd
        * Added: db/source/PPD/Ricoh/PXL/Ricoh-GX_5050N_PXL.ppd
        * Added: db/source/printer/Ricoh-GX_3050N.xml
        * Added: db/source/printer/Ricoh-GX_5050N.xml
	* Modified: db/source/driver/pxlmono.xml

2007-10-11  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/st640ihg.upp.xml, driver/st640ih.upp.xml,
	  driver/st640pg.upp.xml, driver/st640plg.upp.xml,
	  driver/st640pl.upp.xml, driver/st640p.upp.xml,
	  driver/stc1520h.upp.xml, driver/stc2_h.upp.xml,
	  driver/stc2s_h.upp.xml, driver/stc2.upp.xml,
	  driver/stc300bl.upp.xml, driver/stc300bm.upp.xml,
	  driver/stc300.upp.xml, driver/stc500ph.upp.xml,
	  driver/stc500p.upp.xml, driver/stc600ih.upp.xml,
	  driver/stc600pl.upp.xml, driver/stc600p.upp.xml,
	  driver/stc640p.upp.xml, driver/Stc670pl.upp.xml,
	  driver/Stc670p.upp.xml, driver/Stc680pl.upp.xml,
	  driver/Stc680p.upp.xml, driver/stc740ih.upp.xml,
	  driver/stc740pl.upp.xml, driver/stc740p.upp.xml,
	  driver/Stc760pl.upp.xml, driver/Stc760p.upp.xml,
	  driver/Stc777pl.upp.xml, driver/Stc777p.upp.xml,
	  driver/stc800ih.upp.xml, driver/stc800pl.upp.xml,
	  driver/stc800p.upp.xml, driver/stcany.upp.xml,
	  driver/stc_h.upp.xml, driver/stc_l.upp.xml, driver/stc.upp.xml,