@@ -1,0 +1,51 @@
+<printer id="printer/HP-LaserJet_M2727">
+  <make>HP</make>
+  <model>LaserJet M2727</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+    <!--no comments--><!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://www.hp.com</url>
+  <lang>
+    <postscript level="2">
+    <ppd>PPD/HP/HP_LaserJet_M2727_MFP.ppd</ppd>
+    </postscript>
+    <pcl level="6"/>
+    <pjl/>
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+    <general>
+      <ieee1284></ieee1284>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>HP LaserJet M2727</model>
+      <description>Hewlett-Packard LaserJet M2727</description>
+      <commandset>PJL,MLC,PCL,POSTSCRIPT,PCLXL</commandset>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>Postscript</driver>
+  <!--verified-->
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+    For basic printing functionality use the Postscript PPD. 
+    For advanced functionality such as printer status, maintenance 
+    features, scanning and photo card unload use the &lt;a href=&quot;
+    http://hplip.sf.net/&quot;&gt;HPLIP driver&lt;/a&gt; (which includes 
+    HPIJS). &lt;p&gt;
+    
+    </en>
+  </comments>
+</printer>
+
+
