@@ -1,0 +1,48 @@
+<printer id="printer/HP-OfficeJet_Pro_K8600">
+  <make>HP</make>
+  <model>OfficeJet Pro K8600</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>4800</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>4 cartridges: one for each color of CMYK. Also 4 replaceable printheads.</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://h10010.www1.hp.com/wwpc/us/en/sm/WF06b/18972-236251-236261-24728-f51-411179-428774-411185.html</url>
+  <lang>
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+    <parallel>
+      <commandset>MLC,PML,PCL</commandset>
+      <description>Hewlett-Packard OfficeJet_Pro_K8600</description>
+      <manufacturer>HEWLETT-PACKARD</manufacturer>
+      <model>HP OfficeJet Pro K8600</model>
+    </parallel>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>hpijs</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+ 
+    For basic printing functionality use the &lt;a href=&quot;
+    http://hplip.sf.net/&quot;&gt;HPIJS driver &lt;/a&gt;. 
+    For advanced functionality such as printer status, maintenance 
+    features, scanning and photo card unload use the &lt;a href=&quot;
+    http://hplip.sf.net/&quot;&gt;HPLIP driver&lt;/a&gt; (which includes 
+    HPIJS). &lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
