@@ -1,0 +1,86 @@
+<printer id="printer/HP-PhotoSmart_C4380">
+  <make>HP</make>
+  <model>PhotoSmart C4380</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>4800</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>One Color(CMY) + one Black(K) or Photo (cmK)</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>www.hp.com</url>
+  <lang>
+    <pcl level="3e"/>
+  <!--no pjl--><!--No "text"?--></lang>
+  <autodetect>
+    <parallel>
+      <commandset>MLC,PCL,PML,DW-PCL,DYN,DESKJET</commandset>
+      <description>Photosmart C4380</description>
+      <manufacturer>hp</manufacturer>
+      <model>Photosmart C4380</model>
+    </parallel>
+    <usb>
+      <ieee1284>MFG:HP;MDL:Photosmart C4380 series;</ieee1284>
+      <commandset>MLC,PCL,PML,DW-PCL,DESKJET,DYN</commandset>
+      <description>C4380</description>
+      <manufacturer>HP</manufacturer>
+      <model>Photosmart C4380</model>
+    </usb>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>hpijs</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    Duplex unit optional, connection via USB&lt;p&gt;
+
+    The best printout quality you will get with the &quot;hpijs&quot;
+    driver, provided by &lt;a
+    href=&quot;http://hplip.sourceforge.net/&quot;&gt;HP&lt;/a&gt;
+    (compatible to the HP DeskJet 990C), especially the 1200-dpi high
+    resolution mode gives excellent photo quality (the rendered bitmap
+    is 1200x1200 dpi, but the printer hardware does an interpolation
+    then and prints with the printer&apos;s highest resolution). Also
+    the Gimp-Print driver is reported to work (Model setting:
+    &quot;pcl-900&quot;).&lt;p&gt;
+
+    For basic printing functionality use the &lt;a href=&quot;
+    http://hplip.sf.net/&quot;&gt;HPIJS driver &lt;/a&gt;. 
+    For advanced functionality such as printer status, maintenance 
+    features, and photo card unload use the &lt;a href=&quot;
+    http://hplip.sf.net/&quot;&gt;HPLIP driver&lt;/a&gt; 
+    (which includes HPIJS). &lt;p&gt;
+
+    When used with HP&apos;s &quot;hpijs&quot; driver, this printer
+    auto-detects the paper type and ink cartridge type and does
+    appropriate dithering and colour adjustment internally, controlled
+    by the hardware. So when GhostScript with the &quot;hpijs&quot;
+    driver only renders the image with 300 or 600 dpi, higher
+    resolutions are used for the internal dithering. So if you insert
+    photo paper, the printer will print in photo quality, no paper
+    type choice in the driver&apos;s options is needed. There is also
+    a special high resolution mode where the image is rendered in 1200
+    dpi and interpolated to 4800x1200 dpi by the hardware, without
+    paper detection, intended for photo paper only.&lt;p&gt;
+
+    Current border-less (full bleed) support is 3-sided for paper sizes
+    Oufuku-Hagaki or smaller. The HPIJS team is currently evaluating
+    4-sided large paper size (A4/Letter) or smaller full bleed support
+    and expect to address this issue in a future release.
+
+    The duplex unit does not work with Gimp-Print, use
+    &quot;hpijs&quot;, &quot;cdj970&quot; or &quot;pcl3&quot; instead.
+
+    </en>
+  </comments>
+</printer>
+
