@@ -1,3 +1,15 @@
+2007-12-31  John Hosszu <john.hosszu@hp.com>
+
+	* printer/: Added
+          HP-LaserJet_M2727.xml
+          HP-Photosmart_C4380.xml
+          HP-OfficeJet_Pro_K8600.xml
+
+	* PPD/: Added
+          HP-LaserJet_M2727_MFP.ppd
+          HP-LaserJet_9040.ppd
+
+
 2007-12-17  George Liu <george.liu@ricoh-tech.com>
 
         * Updated 328 Ricoh Family PCL-XL PPD files (Supports -o sides option
